<resources>
    <string name="app_name">TestScreen</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="body_mass_index">BODY MASS INDEX</string>
    <string name="bmi_details">BMI Details</string>
    <string name="add_bmi_details">Add BMI Details</string>
    <string name="hello">HELLO</string>
    <string name="normal">YOU ARE NORMAL</string>
    <string name="lack">YOU ARE UNDERWEIGHT </string>
    <string name="over">YOU ARE OVERWEIGHT</string>
    <string name="obese1">YOU ARE CLASS 1 OBESE</string>
    <string name="obese2">YOU ARE CLASS 2 OBESE</string>
    <string name="obese3">YOU ARE CLASS 3 OBESE</string>
    <string name="bmi">Normal BMI range 18.5kg/m2 – 25kg/m2</string>
    <string name="panderal">Panderal index: </string>
    <string name="name">Name</string>
    <string name="enter_personal_detail">Enter Personal Detail</string>
    <string name="calculate_your_body_mass_index">Calculate Your Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="calculate">Calculate</string>
</resources>